--- a/ArtStation/Resources/Messages.resx
+++ b/ArtStation/Resources/Messages.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="InvalidPhoneNumber" xml:space="preserve">
-    <value>Phone number must start with +20 and contain 13 digits</value>
+    <value />
   </data>
   <data name="RequiredField" xml:space="preserve">
-    <value>This field is required</value>
+    <value />
   </data>
 </root>
