--- a/ArtStation/Resources/ControllerMessages.resx
+++ b/ArtStation/Resources/ControllerMessages.resx
@@ -120,6 +120,9 @@
   <data name="InvalidVerificationCode" xml:space="preserve">
     <value />
   </data>
+  <data name="PhoneNumberIsTaken" xml:space="preserve">
+    <value />
+  </data>
   <data name="PhoneAlreadyExists" xml:space="preserve">
     <value />
   </data>
@@ -130,6 +133,51 @@
     <value />
   </data>
   <data name="SendCodeSuccess" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Unauthorized" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UserNotFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EmailAlreadyInUse" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UserDataUpdatedSucessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="FailedToUpdateUserData" xml:space="preserve">
+    <value />
+  </data>
+  <data name="SomethingWrong" xml:space="preserve">
+    <value />
+  </data>
+  <data name="PhotoUpdatedSucessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AddressAddedSucessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AddressAddedFailed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AddressEditFailed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AddressEditSuccessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AddressNotFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="AddressLoadedFailed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="PhotoUploadedFailed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="InvalidFullName" xml:space="preserve">
     <value />
   </data>
 </root>
