--- a/ArtStation/Resources/ControllerMessages.en.resx
+++ b/ArtStation/Resources/ControllerMessages.en.resx
@@ -121,6 +121,9 @@
     <value>Sorry! The code you entered is incorrect. 
 Please try again or request a new code. </value>
   </data>
+  <data name="PhoneNumberIsTaken" xml:space="preserve">
+    <value>This phone number is already in use.</value>
+  </data>
   <data name="PhoneAlreadyExists" xml:space="preserve">
     <value>This phone number is already registered. Please use a different number or log in.</value>
   </data>
@@ -132,5 +135,47 @@ Please try again or request a new code. </value>
   </data>
   <data name="SendCodeSuccess" xml:space="preserve">
     <value>The verification code has been sent successfully.</value>
+  </data>
+  <data name="Unauthorized" xml:space="preserve">
+    <value>You are not authorized to access this resource</value>
+  </data>
+  <data name="UserNotFound" xml:space="preserve">
+    <value>This user does not exist.</value>
+  </data>
+  <data name="EmailAlreadyInUse" xml:space="preserve">
+    <value>Email is already registered.</value>
+  </data>
+  <data name="UserDataUpdatedSucessfully" xml:space="preserve">
+    <value> Your profile has been updated successfully.</value>
+  </data>
+  <data name="FailedToUpdateUserData" xml:space="preserve">
+    <value>Something went wrong In Saving Data. Please try again later.</value>
+  </data>
+  <data name="SomethingWrong" xml:space="preserve">
+    <value>Something went wrong. Please try again later.</value>
+  </data>
+  <data name="PhotoUpdatedSucessfully" xml:space="preserve">
+    <value>Profile image has been updated.</value>
+  </data>
+  <data name="AddressAddedSucessfully" xml:space="preserve">
+    <value>Address added successfully!.</value>
+  </data>
+  <data name="AddressAddedFailed" xml:space="preserve">
+    <value>Failed to add address! Please try again.</value>
+  </data>
+  <data name="AddressEditFailed" xml:space="preserve">
+    <value>Failed to update address! Please try again.</value>
+  </data>
+  <data name="AddressEditSuccessfully" xml:space="preserve">
+    <value>Address updated successfully!</value>
+  </data>
+  <data name="AddressNotFound" xml:space="preserve">
+    <value>Sorry, we couldn’t locate this address.</value>
+  </data>
+  <data name="AddressLoadedFailed" xml:space="preserve">
+    <value>Unable to load addresses. Try again shortly</value>
+  </data>
+  <data name="PhotoUploadedFailed" xml:space="preserve">
+    <value>An error occurred while uploading the profile picture. Please try again.</value>
   </data>
 </root>
