--- a/ArtStation/Resources/ControllerMessages.en.resx
+++ b/ArtStation/Resources/ControllerMessages.en.resx
@@ -178,4 +178,10 @@ Please try again or request a new code. </value>
   <data name="PhotoUploadedFailed" xml:space="preserve">
     <value>An error occurred while uploading the profile picture. Please try again.</value>
   </data>
+  <data name="CountryAddedSuccessfully" xml:space="preserve">
+    <value>Country added successfully.</value>
+  </data>
+  <data name="CountryFailedToAdd" xml:space="preserve">
+    <value>Failed to add country.</value>
+  </data>
 </root>
