--- a/ArtStation/Resources/Messages.en.resx
+++ b/ArtStation/Resources/Messages.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="InvalidFullName" xml:space="preserve">
+    <value>Please enter your first and last name, separated by a single space only</value>
+  </data>
   <data name="InvalidPhoneNumber" xml:space="preserve">
     <value>Phone number must start with +20 and contain 13 digits</value>
   </data>
