--- a/ArtStation/Resources/ControllerMessages.resx
+++ b/ArtStation/Resources/ControllerMessages.resx
@@ -183,4 +183,22 @@
   <data name="CountryFailedToAdd" xml:space="preserve">
     <value />
   </data>
+  <data name="FailedToDeleteCart" xml:space="preserve">
+    <value />
+  </data>
+  <data name="CartClearedSuccessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="CartItemDeletedSucessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="CartItemDeletedFailed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ChooseAddressDeliverySucessfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="ChooseAddressDeliveryFailed" xml:space="preserve">
+    <value />
+  </data>
 </root>
