--- a/ArtStation/Resources/ControllerMessages.en.resx
+++ b/ArtStation/Resources/ControllerMessages.en.resx
@@ -202,4 +202,19 @@ Please try again or request a new code. </value>
   <data name="ChooseAddressDeliveryFailed" xml:space="preserve">
     <value>Failed to select delivery address.</value>
   </data>
+  <data name="GetCartSucessfully" xml:space="preserve">
+    <value>Cart retrieved successfully.</value>
+  </data>
+  <data name="CartEmpty" xml:space="preserve">
+    <value>Your Cart is empty.</value>
+  </data>
+  <data name="CartLoadedFailed" xml:space="preserve">
+    <value>Failed to load cart.</value>
+  </data>
+  <data name="ItemAddedSuccessfully" xml:space="preserve">
+    <value>Item added to cart successfully.</value>
+  </data>
+  <data name="ItemFailedToAddedInCart" xml:space="preserve">
+    <value>Failed to add item to cart.</value>
+  </data>
 </root>
