--- a/ArtStation/Resources/ControllerMessages.resx
+++ b/ArtStation/Resources/ControllerMessages.resx
@@ -228,4 +228,10 @@
   <data name="GetAddressSucessfull" xml:space="preserve">
     <value />
   </data>
+  <data name="BannersSucess" xml:space="preserve">
+    <value />
+  </data>
+  <data name="BannersNotFound" xml:space="preserve">
+    <value />
+  </data>
 </root>
