--- a/ArtStation.Core/Resources/ControllerMessages.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.resx
@@ -234,4 +234,10 @@
   <data name="BannersNotFound" xml:space="preserve">
     <value />
   </data>
+  <data name="Shipped" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Deliverd" xml:space="preserve">
+    <value />
+  </data>
 </root>
