--- a/ArtStation.Core/Resources/Messages.en.resx
+++ b/ArtStation.Core/Resources/Messages.en.resx
@@ -117,13 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Deliverd" xml:space="preserve">
+    <value>Deliverd</value>
+  </data>
+  <data name="Female" xml:space="preserve">
+    <value>Female</value>
+  </data>
   <data name="InvalidFullName" xml:space="preserve">
-    <value />
+    <value>Please enter your first and last name, separated by a single space only</value>
   </data>
   <data name="InvalidPhoneNumber" xml:space="preserve">
-    <value />
+    <value>Phone number must start with +20 and contain 13 digits</value>
+  </data>
+  <data name="Male" xml:space="preserve">
+    <value>Male</value>
+  </data>
+  <data name="Placed" xml:space="preserve">
+    <value>Placed</value>
+  </data>
+  <data name="Ready" xml:space="preserve">
+    <value>Ready</value>
   </data>
   <data name="RequiredField" xml:space="preserve">
-    <value />
+    <value>This field is required</value>
+  </data>
+  <data name="Shipped" xml:space="preserve">
+    <value>Shipped</value>
   </data>
 </root>
