--- a/ArtStation.Core/Resources/ControllerMessages.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.resx
@@ -234,15 +234,19 @@
   <data name="BannersNotFound" xml:space="preserve">
     <value />
   </data>
-
   <data name="Shipped" xml:space="preserve">
     <value />
   </data>
   <data name="Deliverd" xml:space="preserve">
     <value />
   </data>
-	<data name="ProductNameSearch" xml:space="preserve">
-
+  <data name="ProductNameSearch" xml:space="preserve">
+    <value />
+  </data>
+  <data name="OrderSuccesfully" xml:space="preserve">
+    <value />
+  </data>
+  <data name="OrderFailed" xml:space="preserve">
     <value />
   </data>
 </root>
