--- a/ArtStation.Core/Resources/Messages.ar.resx
+++ b/ArtStation.Core/Resources/Messages.ar.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CommentMaxLength" xml:space="preserve">
+    <value>التعليق يجب ان يكون أقل من 500 حرف .</value>
+  </data>
   <data name="Deliverd" xml:space="preserve">
     <value>تم الاستلام</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="Placed" xml:space="preserve">
     <value>تم الطلب</value>
+  </data>
+  <data name="Rating" xml:space="preserve">
+    <value>التقييم يجب ان يكون بين 1 و 5</value>
   </data>
   <data name="Ready" xml:space="preserve">
     <value>تم التجهيز</value>
