--- a/ArtStation.Core/Resources/Messages.en.resx
+++ b/ArtStation.Core/Resources/Messages.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CommentMaxLength" xml:space="preserve">
+    <value>Comment must be less than 500 characters .</value>
+  </data>
   <data name="Deliverd" xml:space="preserve">
     <value>Deliverd</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="Placed" xml:space="preserve">
     <value>Placed</value>
+  </data>
+  <data name="Rating" xml:space="preserve">
+    <value>Rating must be between 1 and 5 .</value>
   </data>
   <data name="Ready" xml:space="preserve">
     <value>Ready</value>
