--- a/ArtStation.Core/Resources/Messages.resx
+++ b/ArtStation.Core/Resources/Messages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CommentMaxLength" xml:space="preserve">
+    <value />
+  </data>
   <data name="Deliverd" xml:space="preserve">
     <value />
   </data>
@@ -133,6 +136,9 @@
     <value />
   </data>
   <data name="Placed" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Rating" xml:space="preserve">
     <value />
   </data>
   <data name="Ready" xml:space="preserve">
