Add user orders endpoint

--- a/ArtStation.Core/Resources/ControllerMessages.ar.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.ar.resx
@@ -246,4 +246,10 @@
   <data name="CitiesReturnedSuccess" xml:space="preserve">
     <value>تم جلب المدن بنجاح</value>
   </data>
+  <data name="NoOrdersForThisUser" xml:space="preserve">
+    <value>لا توجد لديك أي طلبات حتى الآن.</value>
+  </data>
+  <data name="UserHaveOrders" xml:space="preserve">
+    <value>طلباتك هنا.</value>
+  </data>
 </root>
