--- a/ArtStation.Core/Resources/ControllerMessages.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.resx
@@ -234,12 +234,6 @@
   <data name="BannersNotFound" xml:space="preserve">
     <value />
   </data>
-  <data name="Shipped" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Deliverd" xml:space="preserve">
-    <value />
-  </data>
   <data name="ProductNameSearch" xml:space="preserve">
     <value />
   </data>
@@ -250,6 +244,12 @@
     <value />
   </data>
   <data name="CitiesReturnedSuccess" xml:space="preserve">
+    <value />
+  </data>
+  <data name="NoOrdersForThisUser" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UserHaveOrders" xml:space="preserve">
     <value />
   </data>
 </root>
