--- a/ArtStation.Core/Resources/ControllerMessages.ar.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.ar.resx
@@ -309,16 +309,22 @@
   <data name="ReviewUpdated" xml:space="preserve">
     <value>تم تعديل التقييم بنجاح .</value>
   </data>
-	<data name="ProductNameSearch" xml:space="preserve">
+  <data name="ProductNameSearch" xml:space="preserve">
     <value>اسم المنتج لا يمكن أن يكون فارغًا.</value>
   </data>
-	<data name="OrderSuccesfully" xml:space="preserve">
+  <data name="OrderSuccesfully" xml:space="preserve">
     <value>شكرًا لك! تم استلام طلبك وجارٍ ترتيبه للتوصيل.</value>
   </data>
-	<data name="OrderFailed" xml:space="preserve">
+  <data name="OrderFailed" xml:space="preserve">
     <value>فشل الطلب. يرجى المحاولة مرة أخرى أو التواصل مع الدعم.</value>
   </data>
   <data name="CitiesReturnedSuccess" xml:space="preserve">
     <value>تم جلب المدن بنجاح</value>
+  </data>
+  <data name="BrandsList" xml:space="preserve">
+    <value>هذه هي مجموعة البراندات .</value>
+  </data>
+  <data name="BrandsNotFound" xml:space="preserve">
+    <value>لا يوجد براندات .</value>
   </data>
 </root>
