--- a/ArtStation.Core/Resources/ControllerMessages.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.resx
@@ -318,13 +318,19 @@
   <data name="ReviewUpdated" xml:space="preserve">
     <value />
   </data>
-	<data name="OrderSuccesfully" xml:space="preserve">
+  <data name="OrderSuccesfully" xml:space="preserve">
     <value />
   </data>
-	<data name="OrderFailed" xml:space="preserve">
+  <data name="OrderFailed" xml:space="preserve">
     <value />
   </data>
   <data name="CitiesReturnedSuccess" xml:space="preserve">
+    <value />
+  </data>
+  <data name="BrandsList" xml:space="preserve">
+    <value />
+  </data>
+  <data name="BrandsNotFound" xml:space="preserve">
     <value />
   </data>
 </root>
