--- a/ArtStation.Core/Resources/ControllerMessages.resx
+++ b/ArtStation.Core/Resources/ControllerMessages.resx
@@ -318,10 +318,7 @@
   <data name="ReviewUpdated" xml:space="preserve">
     <value />
   </data>
-  <data name="OrderSuccesfully" xml:space="preserve">
-    <value />
-  </data>
-	<data name="CitiesReturnedSuccess" xml:space="preserve">
+  <data name="CitiesReturnedSuccess" xml:space="preserve">
     <value />
   </data>
   <data name="NoOrdersForThisUser" xml:space="preserve">
@@ -334,6 +331,12 @@
     <value />
   </data>
   <data name="BrandsNotFound" xml:space="preserve">
+    <value />
+  </data>
+  <data name="YourOrderNotExsist" xml:space="preserve">
+    <value />
+  </data>
+  <data name="OrderIshere" xml:space="preserve">
     <value />
   </data>
 </root>
